# GeoEngine

./: .dockerignore  .env.example  .gitignore  GeoEngine_Testing_Report.docx  GeoEngine_Testing_Report_v3.docx  Makefile  README.md  Start.txt  docker-compose.yml  package.json  pyproject.toml  turbo.json
.github/workflows/: ci.yml  security.yml
apps/cli/: pyproject.toml
apps/cli/src/: main.py
apps/server/: Dockerfile  pyproject.toml
apps/server/src/: __init__.py  config.py  main.py
apps/server/src/api/: osm.py  simulation.py  terrain.py
apps/server/src/services/: analysis.py  terrain.py
apps/server/src/ws/: handler.py  protocol.py
apps/viewer/: Dockerfile  next.config.ts  package.json  tailwind.config.ts
apps/viewer/src/app/: globals.css  layout.tsx  page.tsx
apps/viewer/src/components/: GeoCanvas.tsx  LayerPanel.tsx  Minimap.tsx
apps/viewer/src/hooks/: useGeoEngine.ts  useWebSocket.ts
infra/nginx/: nginx.conf
infra/nginx/conf.d/: geoengine.conf
scripts/: quick_start.sh  seed_data.py  test_mesh.py  test_server.py
tests/js/: coords.test.ts  setup.ts  terrain.test.ts
tests/python/: conftest.py  test_analysis.py  test_bbox.py  test_coords.py  test_dem.py  test_mesh.py  test_osm.py  test_projection.py
