[project]
name    = "geoengine-cli"
version = "0.1.0"
requires-python = ">=3.11"

[project.scripts]
geoengine = "geoengine_cli.main:main"

dependencies = [
  "geoengine-core",
  "typer[all]>=0.12",
  "rich>=13.7",
  "uvicorn[standard]>=0.27",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
geoengine-core = { workspace = true }
