[project]
name    = "geoengine-cli"
version = "0.1.0"
requires-python = ">=3.11"

description = "GeoEngine — командний інтерфейс"

dependencies = [
    "geoengine-core",
    "typer[all]>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
geoengine = "main:app"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
geoengine-core = { workspace = true }
