[project]
name    = "geoengine-server"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
  "geoengine-core",                 # workspace пакет
  "fastapi>=0.109",
  "uvicorn[standard]>=0.27",
  "websockets>=12.0",
  "pydantic>=2.5",
  "pydantic-settings>=2.1",
  "structlog>=24.1",
  "httpx>=0.26",
  "pillow>=10.2",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "anyio>=4.2",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
geoengine-core = { workspace = true }
