[project]
name    = "geoengine-server"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "geoengine-core",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "httpx>=0.27",
    "websockets>=12.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "scipy>=1.13",
    "rasterio>=1.3",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
geoengine-core = { workspace = true }
